gcc/testsuite/rust/rustc/ui/implied-bounds/from-trait-impl.rs
trait Trait {
    type Assoc;
}

impl<X: 'static> Trait for (X,) {
    type Assoc = ();
}

struct Foo<T: Trait>(T)
where
    T::Assoc: Clone; // any predicate using `T::Assoc` works here

fn func1(foo: Foo<(&str,)>) {
// { dg-error ".E0477." "" { target *-*-* } .-1 }
    let _: &'static str = foo.0.0;
}

trait TestTrait {}

impl<X> TestTrait for [Foo<(X,)>; 1] {}
// { dg-error ".E0310." "" { target *-*-* } .-1 }

fn main() {}

